--- a/simon/package.json
+++ b/simon/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.8.0",
     "react": "^16.3.2",
     "react-countdown-clock": "^2.4.0",
     "react-dom": "^16.3.2",
