--- a/breakout/package.json
+++ b/breakout/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^5.5.5",
     "hammerjs": "^2.0.8",
+    "pressure": "^2.1.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
