--- a/simon/package.json
+++ b/simon/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.8.0",
+    "pressure": "^2.1.2",
     "react": "^16.3.2",
     "react-countdown-clock": "^2.4.0",
     "react-dom": "^16.3.2",
